Merapihkan kode bagian autentikasi